added navbar in Environments

--- a/index.html
+++ b/index.html
@@ -3,19 +3,38 @@
 
 <head>
   <link rel='stylesheet' href='css/main.css'>
+ 
 </head>
 
 <body>
-  <h1> Rounded button </h1>
-  <p> Create a rounded button with "@include rounded-button([radius in px])"
-  <div id='example-rounded'>Click Me</div>
 
-  <h1> Vertically centered element </h1>
+  <h2> Rounded button </h2>
+  <p> Create a rounded button with "@include rounded-button([radius in px])"
+  <div class='example-rounded'>Click Me</div>
+
+  <h2> Vertically centered element </h2>
   <p> Create a vertically centered element with "@include vertically-centered-element"</p>
   <div id='example-centered-wrapper'>
     <div id='example-centered'>
      </div>
   </div>
+
+  <h2> Hamwork</h2>
+
+  <div class='navbar-wrapper'>
+    <h3>Navbar basic with center text and shadow fade</h3>
+    <div class='hambar'>
+      <ul>
+        <li>Home</li>
+        <li>Info</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+  </div>
+
+
+
+
 
 </body>
 
